--- a/spark-master/Dockerfile
+++ b/spark-master/Dockerfile
@@ -1,4 +1,4 @@
-FROM earthquakesan/hadoop-spark:1.0.0
+FROM aluxian/hadoop-spark
 MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 
 ADD spark-master-entrypoint.sh /spark-master-entrypoint.sh
